# networked-thinking-skills

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONCEPTS.md  LICENSE  README.md  SECURITY.md  lefthook.yml  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  claude-code-review.yml
docs/: audit-workflow.md  contributor-guide.md  install.md  remediation.md  rubric.md
docs/plans/: 2026-07-03-001-fix-plain-prose-dae-plan.md  2026-07-06-001-feat-runner-adapters-model-judgment-collection-plan.md  2026-07-15-001-fix-proposition-title-alignment-plan.md
shared/references/: audit-rubric.md  doctrine.md  install-matrix.md  model-judgment-prompt.md  remediation-context.md  task-contract.md
shared/schemas/: audit-row.schema.json  config.schema.json  model-judgment.schema.json  remediation-plan.schema.json  run-manifest.schema.json
shared/scripts/: apply_model_judgments.py  (+26 more)
tests/: test_apply_model_judgments.py  test_atomic_note_skill_examples.py  test_audit_engine.py  test_audit_row_schema.py  test_base_generation.py  test_collect_model_judgments.py  test_finding_codes.py  test_fixture_vault.py  test_install_command_verifier.py  test_managing_obsidian_tasks_skill.py  test_markdown_parse.py  test_model_contract.py  test_model_prompt.py  test_obsidian_cli_wrapper.py  test_obsidian_preflight.py  test_prepare_model_judgment.py  test_remediation.py  test_repo_smoke.py  test_report_generation.py  test_schema_validation.py  test_scoring.py  test_skill_artifact_sync.py  test_skill_integrity.py  test_verify_anki_notes.py
(+71 files in other folders)
